--- a/ansible/host_vars/testlab-csr2.yml
+++ b/ansible/host_vars/testlab-csr2.yml
@@ -18,3 +18,23 @@ l3_interfaces:
   - name: Gi0/2
     ipv4:
     - address: 192.168.23.2/24
+
+routing:
+  ospf:
+    interfaces:
+      - name: Gi0/1
+        address_family:
+          - afi: ipv4
+            process:
+              id: 1
+              area_id: 0
+            adjacency: true
+            shutdown: false
+      - name: Gi0/2
+        address_family:
+          - afi: ipv4
+            process:
+              id: 1
+              area_id: 0
+            adjacency: true
+            shutdown: false
