--- a/ansible/host_vars/testlab-csr1.yml
+++ b/ansible/host_vars/testlab-csr1.yml
@@ -1,22 +1,22 @@
 ---
 hostname: testlab-csr1
 interfaces:
-  - name: Gi0/1
-    description: testlab-csr2:Gi0/1 - configured by Ansible
+  - name: GigabitEthernet1
+    description: testlab-csr2:GigabitEthernet1 - configured by Ansible
     enabled: true
 
 l3_interfaces:
   - name: loopback0
     ipv4:
     - address: 1.1.1.1/32
-  - name: Gi0/1
+  - name: GigabitEthernet1
     ipv4:
     - address: 192.168.12.1/24
 
 routing:
   ospf:
     interfaces:
-      - name: Gi0/1
+      - name: GigabitEthernet1
         address_family:
           - afi: ipv4
             process:
