--- a/ansible/host_vars/testlab-csr2.yml
+++ b/ansible/host_vars/testlab-csr2.yml
@@ -1,28 +1,28 @@
 ---
 hostname: testlab-csr2
 interfaces:
-  - name: Gi0/1
-    description: testlab-csr1:Gi0/1 - configured by Ansible
+  - name: GigabitEthernet1
+    description: testlab-csr1:GigabitEthernet1 - configured by Ansible
     enabled: true
-  - name: Gi0/2
-    description: testlab-csr3:Gi0/1 - configured by Ansible
+  - name: GigabitEthernet2
+    description: testlab-csr3:GigabitEthernet1 - configured by Ansible
     enabled: true
 
 l3_interfaces:
   - name: loopback0
     ipv4:
     - address: 2.2.2.2/32
-  - name: Gi0/1
+  - name: GigabitEthernet1
     ipv4:
     - address: 192.168.12.2/24
-  - name: Gi0/2
+  - name: GigabitEthernet2
     ipv4:
     - address: 192.168.23.2/24
 
 routing:
   ospf:
     interfaces:
-      - name: Gi0/1
+      - name: GigabitEthernet1
         address_family:
           - afi: ipv4
             process:
@@ -30,7 +30,7 @@ routing:
               area_id: 0
             adjacency: true
             shutdown: false
-      - name: Gi0/2
+      - name: GigabitEthernet2
         address_family:
           - afi: ipv4
             process:
