--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -6,7 +6,7 @@
   tasks:
 
   - name: Interfaces | Configure layer 2 interface details
-    cisco.ios.ios_l2_interfaces:
+    cisco.ios.ios_interfaces:
       config: "{{ interfaces }}"
       state: merged
 
