Adds process configuration

--- a/ansible/host_vars/testlab-csr2.yml
+++ b/ansible/host_vars/testlab-csr2.yml
@@ -38,3 +38,6 @@ routing:
               area_id: 0
             adjacency: true
             shutdown: false
+    processes:
+      - process_id: 100
+        router_id: 2.2.2.2
