--- a/ansible/host_vars/testlab-csr3.yml
+++ b/ansible/host_vars/testlab-csr3.yml
@@ -24,3 +24,6 @@ routing:
               area_id: 0
             adjacency: true
             shutdown: false
+    processes:
+      - process_id: 100
+        router_id: 3.3.3.3
