--- a/ansible/host_vars/testlab-csr1.yml
+++ b/ansible/host_vars/testlab-csr1.yml
@@ -6,7 +6,7 @@ interfaces:
     enabled: true
 
 l3_interfaces:
-  - name: loopback0
+  - name: Loopback0
     ipv4:
     - address: 1.1.1.1/32
   - name: GigabitEthernet2
