--- a/ansible/host_vars/testlab-csr2.yml
+++ b/ansible/host_vars/testlab-csr2.yml
@@ -9,9 +9,9 @@ interfaces:
     enabled: true
 
 l3_interfaces:
-  - name: loopback0
+  - name: Loopback0
     ipv4:
-    - address: 2.2.2.2/32
+    - address: 2.2.2.2/24
   - name: GigabitEthernet2
     ipv4:
     - address: 192.168.12.2/24
