--- a/ansible/host_vars/testlab-csr3.yml
+++ b/ansible/host_vars/testlab-csr3.yml
@@ -1,14 +1,29 @@
 ---
 hostname: testlab-csr3
 interfaces:
-  - name: Gi0/1
-    description: testlab-csr2:Gi0/2 - configured by Ansible
+  - name: GigabitEthernet2
+    description: testlab-csr2:GigabitEthernet2 - configured by Ansible
     enabled: true
 
 l3_interfaces:
   - name: loopback0
     ipv4:
     - address: 3.3.3.3/32
-  - name: Gi0/1
+  - name: GigabitEthernet2
     ipv4:
     - address: 192.168.23.3/24
+
+routing:
+  ospf:
+    interfaces:
+      - name: GigabitEthernet2
+        address_family:
+          - afi: ipv4
+            process:
+              id: 100
+              area_id: 0
+            adjacency: true
+            shutdown: false
+    processes:
+      - process_id: 100
+        router_id: 3.3.3.3
