--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -1,6 +1,17 @@
 ---
 ansible_command_timeout: 60
 
+system_config:
+  domain_name: example.com
+  domain_search:
+  - net.example.com
+  - net.example.net
+  lookup_source: Management1
+  lookup_enabled: yes
+  name_servers:
+    - 10.255.0.1
+    - 8.8.8.8
+
 snmp_config:
   communities:
   - name: snmpCommRW
