--- a/ansible/tests/test_system.yaml
+++ b/ansible/tests/test_system.yaml
@@ -4,6 +4,43 @@
   gather_facts: false
 
   tasks:
-    - name: hello world
-      debug: 
-        msg: Not yet implemented
+    - name: run show command on remote devices
+      ios_command:
+        commands: show running-config
+      register: result
+
+    - name: Pass text and template_path
+      ansible.utils.cli_parse:
+        text: "{{ result.stdout[0] }}"
+        parser:
+          name: ansible.utils.ttp
+          template_path: "../templates/iosxe_domain.ttp"
+      register: parser_output_result
+
+    - name: extract parsed output
+      set_fact:
+        parsed_output: "{{ parser_output_result.parsed[0][0] }}"
+
+    - name: assert that hostname matches
+      assert:
+        that: parsed_output.hostname == inventory_hostname
+
+    - name: assert that ip domain name matches
+      assert:
+        that: parsed_output.ip_domain_name == system_config.domain_name
+
+    - name: assert that ip domain search list matches
+      assert:
+        that: parsed_output.domain_list == system_config.domain_search
+
+    - name: assert that lookup source interface matches
+      assert:
+        that: parsed_output.lookup_source_interface == system_config.lookup_source
+
+    - name: assert that name servers match
+      assert:
+        that: parsed_output.name_servers == system_config.name_servers
+
+    - name: assert that ip lookup is not disabled
+      assert:
+        that: parsed_output.lookup_disabled is not defined
