--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -6,7 +6,7 @@ system_config:
   domain_search:
   - net.example.com
   - net.example.net
-  lookup_source: Management1
+  lookup_source: GigabitEthernet1
   lookup_enabled: yes
   name_servers:
     - 10.255.0.1
