--- a/ansible/tests/test_ntp.yaml
+++ b/ansible/tests/test_ntp.yaml
@@ -12,7 +12,9 @@
     - name: assert that ntp servers match
       assert:
         that: gathered_ntp_config.gathered.servers == ntp_config.servers
+        fail_msg: "FAILURE: NTP Servers do not match. Expected: {{ gathered_ntp_config.gathered.servers}} Found: {{ ntp_config.servers }}"
 
     - name: assert that ntp source matches
       assert:
         that: gathered_ntp_config.gathered.source == ntp_config.source
+        fail_msg: "FAILURE: NTP Servers do not match. Expected: {{ gathered_ntp_config.gathered.source }} Found: {{ ntp_config.source }}"
