--- a/ansible/tests/test_ntp.yaml
+++ b/ansible/tests/test_ntp.yaml
@@ -4,7 +4,7 @@
   gather_facts: false
 
   tasks:
-    - name: retrieve SNMP Server Settings
+    - name: retrieve NTP Server Settings
       cisco.ios.ios_ntp_global:
         state: gathered
       register: gathered_ntp_config
@@ -12,9 +12,9 @@
     - name: assert that ntp servers match
       assert:
         that: gathered_ntp_config.gathered.servers == ntp_config.servers
-        fail_msg: "FAILURE: NTP Servers do not match. Expected: {{ gathered_ntp_config.gathered.servers}} Found: {{ ntp_config.servers }}"
+        fail_msg: "FAILURE: NTP Servers do not match. Expected: {{ gathered_ntp_config.gathered.servers | default(none) }} Found: {{ ntp_config.servers }}"
 
     - name: assert that ntp source matches
       assert:
         that: gathered_ntp_config.gathered.source == ntp_config.source
-        fail_msg: "FAILURE: NTP Servers do not match. Expected: {{ gathered_ntp_config.gathered.source }} Found: {{ ntp_config.source }}"
+        fail_msg: "FAILURE: NTP Servers do not match. Expected: {{ gathered_ntp_config.gathered.source | default(none) }} Found: {{ ntp_config.source }}"
