--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -32,10 +32,10 @@ snmp_config:
 
 ntp_config:
   servers:
-    - server: 0.north-america.pool.ntp.org
+    - server: 192.227.183.3
       version: 2
-    - server: 1.north-america.pool.ntp.org
+    - server: 12.167.151.1
       version: 2
-    - server: 2.north-america.pool.ntp.org
+    - server: 204.2.134.162
       version: 2
   source: GigabitEthernet1
