--- a/ansible/tests/test_system.yaml
+++ b/ansible/tests/test_system.yaml
@@ -43,7 +43,7 @@
 
     - name: assert that ip domain search list matches
       assert:
-        that: parsed_output.domain_list == system_config.domain_search
+        that: parsed_output.domain_list|sort == system_config.domain_search|sort
         fail_msg: "FAILURE: IP domain search list. Expected: {{ system_config.domain_search }} Found: {{ parsed_output.domain_list }}" 
 
     - name: assert that lookup source interface matches
@@ -53,7 +53,7 @@
 
     - name: assert that name servers match
       assert:
-        that: parsed_output.name_servers == system_config.name_servers
+        that: parsed_output.name_servers|sort == system_config.name_servers|sort
         fail_msg: "FAILURE: Name servers. Expected: {{ system_config.name_servers }} Found: {{ parsed_output.name_servers }}" 
 
     - name: assert that ip lookup is not disabled
