--- a/ansible/tests/test_snmp.yaml
+++ b/ansible/tests/test_snmp.yaml
@@ -22,19 +22,19 @@
     - name: assert that communities match
       assert:
         that: gathered_snmp_config.gathered.communities|default(none) == snmp_config.communities
-        fail_msg: "FAILURE: Community string. Expected: {{ snmp_config.communities }} Found: {{ gathered_snmp_config.gathered.communities | default(none) }}"    
+        fail_msg: "FAILURE: Community string mismatch on {{ inventory_hostname }}. Expected: {{ snmp_config.communities }} Found: {{ gathered_snmp_config.gathered.communities | default(none) }}"    
 
     - name: assert that snmp contact matches
       assert:
         that: gathered_snmp_config.gathered.contact|default(none) == snmp_config.contact
-        fail_msg: "FAILURE: SNMP contact. Expected: {{ snmp_config.contact }} Found: {{ gathered_snmp_config.gathered.contact | default(none) }}"  
+        fail_msg: "FAILURE: SNMP contact mismatch on {{ inventory_hostname }}. Expected: {{ snmp_config.contact }} Found: {{ gathered_snmp_config.gathered.contact | default(none) }}"  
 
     - name: assert that snmp host configuration matches
       assert:
         that: gathered_snmp_config.gathered.hosts|default(none) == snmp_config.hosts
-        fail_msg: "FAILURE: SNMP hosts. Expected: {{ snmp_config.hosts }} Found: {{ gathered_snmp_config.gathered.hosts | default(none) }}"  
+        fail_msg: "FAILURE: SNMP host mismatch on {{ inventory_hostname }}. Expected: {{ snmp_config.hosts }} Found: {{ gathered_snmp_config.gathered.hosts | default(none) }}"  
 
     - name: assert that snmp traps are enabled
       assert:
         that: gathered_snmp_config.gathered.traps|default(none) == snmp_config.traps
-        fail_msg: "FAILURE: SNMP traps. Expected: {{ snmp_config.traps }} Found: {{ gathered_snmp_config.gathered.traps | default(none) }}"  
+        fail_msg: "FAILURE: SNMP trap mismatch on {{ inventory_hostname }}. Expected: {{ snmp_config.traps }} Found: {{ gathered_snmp_config.gathered.traps | default(none) }}"  
